BITE/css/Homepage.css
/* ----- Carousel ------ */

.jumbotron .container {
  width: 100%;
}
#myCarousel h1 {
  margin: 0 auto;
  text-align: center;
  position: absolute;
  z-index: 90;
  color: #fff;
  top: 40%;
  /* left: 50%; */
  width: 100%;
  font-family: 'Oswald', Fallback, sans-serif;
  text-shadow: 0 4px 4px rgba(0,0,0,0.5);
  padding: 10px;
  font-size: 72px; 
}
#myCarousel h2 {
  margin: 0 auto;
  text-align: center;
  position: absolute;
  z-index: 100;
  color: #fff;
  top: 40%;
  /* left: 50%; */
  width: 100%;
  font-family: 'Oswald', Fallback, sans-serif;
 /* text-shadow: 0 4px 4px rgba(0,0,0,0.5); */
  padding: 10px;
  font-size: 72px; 
  -webkit-transition: box-shadow .2s ease-out;
-moz-transition: box-shadow .2s ease-out;
-o-transition: box-shadow .2s ease-out;
transition: box-shadow .2s ease-out;
}
#myCarousel h2:hover {
  /*box-shadow: 0 -200px 100px -100px rgba(0, 0, 0, 0.2) inset;
    -moz-box-shadow: 0 -200px 100px -100px rgba(0, 0, 0, 0.2) inset;
    -webkit-box-shadow: 0 -200px 100px -100px rgba(0, 0, 0, 0.2) inset; */
    text-shadow: 0 2px 2px rgba(0,0,0,0.3);
}
#myCarousel p {
  text-align: center;
  font-family: 'Raleway', sans-serif;
  color: #FFF;
  font-weight: 300;
  /*text-shadow: 0 2px 2px rgba(0,0,0,0.5);*/
  font-size: 20px;
  margin: 0 auto;
  position: absolute;
  z-index: 100;
  top: 55%;
  width: 100%;
}
#myCarousel p:hover {
  text-shadow: 0 1px 1px rgba(0,0,0,0.2);
}
.carousel-control.right {
  background-image: none;
}
.carousel-control.left {
  background-image: none;
}
.carousel {
height: 620px;
margin-bottom: 60px;
}

/* Declare heights because of positioning of img element */
.carousel .item {
  height: 620px;
  background-color: #777;
}
.carousel-inner > .item > img {
  position: absolute;
  top: 0;
  left: 0;
  min-width: 100%;
  min-height: 620px;
}
#myCarousel {
  margin-top: 65px;
}
@media screen and (max-width: 991px) {
  #myCarousel {
    margin-top: 82px;
  }
}

/* ----- Posts ------ */

.entry img {
  width: 100%;
  min-height: 100%;

}
.entry {
  overflow: hidden; 
  max-height: 420px;
}
/*.article-header {
  font-family: 'Oswald', serif; 
  font-weight: 300;  
} */

.posts .col-md-6 {
  padding: 0px;
  margin: 0px;
}

.entry .feat-overlay{
position: absolute;
top: 0;
left: 0;
width: 100%;
height: 100%;
background: rgba(20,20,20,0.7);
opacity: 0;
-webkit-transition: opacity .3s ease-out;
-moz-transition: opacity .3s ease-out;
-o-transition: opacity .3s ease-out;
transition: opacity .3s ease-out;
line-height: 1;
}
.entry:hover .feat-overlay{
-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
filter: alpha(opacity=100);
opacity: 1;
}

.title-wrap {
  height: 100%;
  width: 100%;
  z-index: 8;
  padding-left: 20px;
  padding-right: 20px;
  display: table;
  position: relative;
}
.title-wrap .content {
  display: table-cell;
vertical-align: middle;
}

.category-name {
  padding: 15px;
  width: 100%;
  /*text-shadow: 0 2px 2px rgba(0,0,0,0.5);*/
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  -ms-box-sizing: border-box;
  box-sizing: border-box;
  text-align: center;
  font-family: 'Dosis', sans-serif;
  font-weight: 200;
  color: #FFF;
  letter-spacing: 1px;
  font-size: 30px;
  text-transform: uppercase;
}
.category-title {
  padding: 0px 7px;
  color: #fff;
  font-size: 48px;
  text-transform: uppercase;
  display: block;
  text-align: center;
  margin: 0 auto;
  width: 100%;
  font-family: 'Oswald', Arial, Helvetica, sans-serif;
  /*text-shadow: 0 2px 2px rgba(0,0,0,0.5);*/
  font-weight: 400;
  /*border-bottom: 1px solid #fff;
  border-top: 1px solid #fff;*/
  word-wrap:break-word
}



@media (max-width: 481px) {
.category-title {
  top: 40%;
  margin-top: 15px;
  font-family: 'Oswald', Arial, Helvetica, sans-serif;
  text-shadow: 0 2px 2px rgba(0,0,0,0.5);
  font-weight: 400;
  font-size: 35px;
  word-wrap:break-word
}
.category-name {
  position: absolute;
  top: 20%;
  padding: 20px;
  font-size: 30px;
  text-transform: uppercase;
  word-wrap:break-word
}
}

.date {
position: absolute;
bottom: 0%;
padding: 5px;
width: 100%;
text-shadow: 0 1px 1px rgba(0,0,0,0.2);
-webkit-box-sizing: border-box;
-moz-box-sizing: border-box;
-ms-box-sizing: border-box;
box-sizing: border-box;
text-align: center;
font-family: 'Dosis', sans-serif;
font-weight: 400;
color: #353535;
letter-spacing: 1px;
font-size: 20px;
text-transform: uppercase;
box-shadow: 0 -200px 100px -100px rgba(255, 255, 255, 0.5) inset;
-moz-box-shadow: 0 -200px 100px -100px rgba(255, 255, 255, 0.5) inset;
-webkit-box-shadow: 0 -200px 100px -100px rgba(255, 255, 255, 0.5) inset; 
}

.entry:hover .date {
color: #FFF;
box-shadow: none;
-moz-box-shadow: none;
-webkit-box-shadow: none;
}

article img {
  display: block;
  width: 100%;
}

.indiv-post {
  margin-left: 15px;
  margin-right: 15px;
}
.row .image {
margin: 0px 0px;
}
.entry:hover .entry .image {
  box-shadow: 0 -200px 100px -100px rgba(0, 0, 0, 0.4) inset;
    -moz-box-shadow: 0 -200px 100px -100px rgba(0, 0, 0, 0.4) inset;
    -webkit-box-shadow: 0 -200px 100px -100px rgba(0, 0, 0, 0.4) inset; 
}
.article-container {
  margin: 10px;
}




/* ----- Trending ------ */

.trending img {
  width: 100%;
  min-height: 100%;
}
.trending {
  overflow: hidden; 
  height: 100%;
}
.trending-section {
  height: 100%;
}
.trending .title {
  text-align: center;
  font-family: 'PT Sans', sans-serif;
  font-weight: 200;
  color: #fff;
  letter-spacing: 1px;
  font-size: 20px;
  word-wrap: break-word;
  font-weight: 700;
  padding-top: 5px;
  margin-top: -34px;
  border: 1px solid #FFF;
  box-shadow: 0 -200px 100px -100px rgba(0, 0, 0, 0.2) inset;
  -moz-box-shadow: 0 -200px 100px -100px rgba(0, 0, 0, 0.2) inset;
  -webkit-box-shadow: 0 -200px 100px -100px rgba(0, 0, 0, 0.2) inset;
  width: 100%;  

}
.trending-section .category-title {
  padding: 0px 7px;
  color: #fff;
  font-size: 45px;
  text-transform: uppercase;
  margin-bottom: 2px;
  display: block;
  text-align: center;
  position: absolute;
  top: 40%;
  margin: 0 auto;
  margin-top: 15px;
  width: 100%;
  font-family: 'Oswald', Arial, Helvetica, sans-serif;
  text-shadow: 0 2px 2px rgba(0,0,0,0.5);
  font-weight: 400;
  /*border: 1px solid #fff;*/
  word-wrap:break-word
}
.trending {
  padding: 0px;
  margin-bottom: 15px;
}

.trending {
  -webkit-transition: opacity .3s ease-out;
  -moz-transition: opacity .3s ease-out;
  -o-transition: opacity .3s ease-out;
  -ms-transition: opacity .3s ease-out;
  transition: opacity .3s ease-out;
  opacity: 1;
}
.trending:hover {
-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
filter: alpha(opacity=100);
opacity: 0.6;
background-color: #000;
}


.trending-overlay{
position: absolute;
top: 0;
left: 0;
width: 95%;
height: 100%;
background: rgba(20,20,20,0.7);
opacity: 0;
-webkit-transition: opacity .2s ease-out;
-moz-transition: opacity .2s ease-out;
-o-transition: opacity .2s ease-out;
transition: opacity .2s ease-out;
line-height: 1;
margin-left: 15px;
}
.trending-overlay:hover {
-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
filter: alpha(opacity=100);
opacity: 1;
}

.trending-image {
  overflow: hidden;
  width: 100%;
  margin: 0 auto;
  background-size: cover;
}

.trending-image img.wide {
    max-width: 100%;
    max-height: 100%;
    height: auto;
}
.trending-image img.tall {
    max-height: 100%;
    max-width: 100%;
    width: auto;
}​

/* ----- Modal ------ */

.modal-title {
color: #333;
padding: 8px 20px;
font-size: 20px;
text-align: center;
font-family: 'Dosis', serif;
padding-bottom: 0px;
text-transform: uppercase;
}
.modal-article img {
  width: 100%;
}
.modal-body h5 {
  font-family: 'Raleway', sans-serif;
  text-align: center;
}
.modal-dialog {
  width: 85%;
  max-width: 900px;
  margin: 30px auto;
}
.modal-title {
color: #333;
padding: 8px 20px;
font-size: 20px;
text-align: center;
font-family: 'Dosis', serif;
padding-bottom: 0px;
text-transform: uppercase;
}
.modal-body h3 {
  font-family: 'Oswald', sans-serif;
  font-size: 30px;
  margin-top: -10px;
  text-align: center;
}
.modal-footer h5 {
  font-family: 'Raleway', sans-serif;
  text-align: center;
  color: #a2a2a2;
}
.modal-footer {
  padding: 0px;
  margin-top: 0px;
}

